# imperal-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  api_surface.json  pyproject.toml  sdk-reference.json  sdk_claims.json  sdl_roles.json
.github/workflows/: identity-contract.yml  publish.yml  test.yml
.venv311/: pyvenv.cfg
docs/: README.md  api-reference.md  auth.md  cli.md  clients.md  concepts.md  context-object.md  context-router.md  extension-guidelines.md  extension-ui.md  quickstart.md  sdl-facets.md  skeleton.md  testing.md  tools.md  ui-components.md
docs/openapi/: README.md  registry.json  sharelock-cases.json
examples/hello_extension/: main.py
src/: .codebase-index-cache.pkl
src/imperal_sdk/: __init__.py  _shared_http.py  context.py  decorators.py  errors.py  extension.py  manifest.py  manifest_schema.py  manifest_schema_ui.py  oauth_state.py  protocols.py  tool_def.py  validator.py  validator_v1_6_0.py
src/imperal_sdk/ai/: __init__.py  client.py
src/imperal_sdk/auth/: __init__.py  client.py  middleware.py  user.py
src/imperal_sdk/billing/: __init__.py  client.py
src/imperal_sdk/cache/: __init__.py  client.py  protocol.py
src/imperal_sdk/chat/: __init__.py  action_result.py  error_codes.py  exceptions.py  execution.py  extension.py  filters.py  guards.py  handler.py  kernel_primitives.py  narration.py  narration_guard.py  prompt.py  refusal.py  retry.py
src/imperal_sdk/cli/: __init__.py  main.py
src/imperal_sdk/config/: __init__.py  client.py
src/imperal_sdk/db/: __init__.py  client.py
src/imperal_sdk/devtools/: __init__.py  contract_checks.py  generate_api_surface.py  generate_reference.py  generate_sdk_claims.py  validate_identity_contract.py
src/imperal_sdk/extensions/: __init__.py  client.py
src/imperal_sdk/http/: __init__.py  client.py
src/imperal_sdk/ir/: __init__.py  _impl.py  actions.py  custom_roles.py  migrate.py  produce.py  schema.py  skeleton.py  ui.py  ui_children.py  ui_template.py  validator.py
src/imperal_sdk/notify/: __init__.py  client.py
src/imperal_sdk/prompts/: __init__.py  icnli_integrity_rules.txt  kernel_formatting_rule.txt  kernel_proactivity_rule.txt
src/imperal_sdk/rpc/: __init__.py  codec.py  contract.py
src/imperal_sdk/runtime/: __init__.py  _platform.py  action_writer.py  canon.py  cascade_map.py  context_factory.py  engine.py  event_publisher.py  executor.py  executor.py.bak  hosted_client.py  hub.py  hub.py.bak.20260408  interpreter.py  kernel_context.py  llm_provider.py  loader.py  local_engine.py  message_adapter.py  relations.py  task_manager.py  template.py  template_resolver.py  verbs.py
src/imperal_sdk/schemas/: chat_result.schema.json  completion_result.schema.json  document.schema.json  event.schema.json  file_info.schema.json  function_call.schema.json  imperal.schema.json  ir.schema.json  metered_event.schema.json
src/imperal_sdk/sdl/: __init__.py  _generate_roles_json.py  entity.py  facet_resolve.py  field.py  roles.py
src/imperal_sdk/secrets/: __init__.py  client.py  exceptions.py  panel_handler.py  spec.py
src/imperal_sdk/security/: __init__.py  call_token.py
src/imperal_sdk/skeleton/: __init__.py  client.py
src/imperal_sdk/storage/: __init__.py  client.py
src/imperal_sdk/store/: __init__.py  client.py  exceptions.py
src/imperal_sdk/testing/: __init__.py  mock_context.py  mock_secrets.py
src/imperal_sdk/tools/: __init__.py  client.py
src/imperal_sdk/types/: __init__.py  action_result.py  chat_result.py  client_contracts.py  contracts.py  contributions.py  events.py  health.py  identity.py  metered_event.py  models.py  pagination.py  store_contracts.py  (+1 more)
tests/: conftest.py  test_action_result_typed.py  test_as_user.py  test_auth.py  test_billing.py  test_cache_client.py  test_cache_model.py  test_call_token.py  test_chat_extension_deprecation.py  test_chat_extension_no_llm_router.py  test_chat_filters.py  test_chat_function_background_flag.py  test_chat_guards.py  test_chat_guards_bleed.py  test_chat_prompt.py  test_chat_pydantic_retry.py  test_chat_result.py  test_cli.py  test_client_contracts.py  test_client_emit_neutral.py  test_config_client.py  test_context.py  test_context_background_task.py  test_context_deliver_chat_message.py  test_context_guards.py  test_contracts.py  test_contracts_live.py  test_contributions.py  test_data_model_kwarg.py  test_document_contract.py  test_emits_decorator.py  test_error_codes.py  test_errors.py  test_event_schema_v2.py  test_events_health.py  test_extension.py  test_extension_v2.py  test_extensions_emit.py  test_handler_p2.py  test_http_json_and_mock.py  (+87 more)
tests/contract/: test_action_schemas.py  test_artifacts_freshness.py  test_contract_checks_selftest.py  test_generate_sdk_claims.py  test_identity_nonempty.py  test_ir_schema_fresh.py  test_meter_lua_contract.py  test_metered_event_contract.py  test_notify_wire_payload.py  test_public_docstrings_engine_neutral.py  test_reference_completeness.py  test_reference_no_leak.py  test_sample_contract_shape.py  test_sdk_matches_kernel_contract.py
tests/contracts/: test_store_contracts.py
tests/ir/: test_custom_roles.py  test_ir_impl.py  test_ir_mapping_real_ext.py  test_ir_migrate.py  test_ir_produce.py  test_ir_schema.py  test_ir_skeleton.py  test_ir_ui.py  test_ir_ui_produce.py  test_ir_validator.py  test_ir_versions.py  test_ui_children.py  test_ui_template.py
tests/rpc/: test_boundary_seal.py  test_codec.py  test_contract.py
tests/runtime/: test_canon.py  test_canon_template.py  test_engine_abc.py  test_engine_parity.py  test_executor_neutral.py  test_hosted_client.py  test_interpreter.py  test_llm_provider_config_store.py  test_llm_provider_ctx_injection.py  test_local_engine.py  test_platform_shim.py  test_template.py  test_verb_ai.py  test_verb_call_directives.py  test_verb_conditional.py  test_verb_store.py
tests/store/: test_list_users_client.py  test_query_all_client.py
tests/tools/: test_generate_api_surface.py  test_generate_reference.py  test_reference_description.py  test_reference_flags.py  test_reference_typegraph.py
tests/ui/: test_input_type_enum.py
(+79 files in other folders)
