[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imperal-sdk"
version = "1.5.2"
description = "SDK for building Imperal Cloud extensions"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.10.0",
    "pydantic>=2.10.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
]
fastapi = [
    "fastapi>=0.115.0",
]
db = [
    "sqlalchemy[asyncio]>=2.0.30",
    "aiomysql>=0.2.0",
]

[project.scripts]
imperal = "imperal_sdk.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/imperal_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
