[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imperal-sdk"
version = "1.5.14"
description = "SDK for building Imperal Cloud extensions"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Valentin Scerbacov" },
    { name = "Imperal, Inc." },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.0",
    "pyjwt[crypto]>=2.10.0",
    "pydantic>=2.10.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "openapi-spec-validator>=0.7.1",
    "jsonschema>=4.21.0",
]
fastapi = [
    "fastapi>=0.115.0",
]
db = [
    "sqlalchemy[asyncio]>=2.0.30",
    "aiomysql>=0.2.0",
]
contract = [
    "schemathesis>=3.30.0",
]

[project.scripts]
imperal = "imperal_sdk.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/imperal_sdk"]

[tool.hatch.build.targets.wheel.force-include]
"src/imperal_sdk/schemas/imperal.schema.json" = "imperal_sdk/schemas/imperal.schema.json"
"src/imperal_sdk/schemas/action_result.schema.json" = "imperal_sdk/schemas/action_result.schema.json"
"src/imperal_sdk/schemas/event.schema.json" = "imperal_sdk/schemas/event.schema.json"
"src/imperal_sdk/schemas/function_call.schema.json" = "imperal_sdk/schemas/function_call.schema.json"
"src/imperal_sdk/schemas/chat_result.schema.json" = "imperal_sdk/schemas/chat_result.schema.json"
"src/imperal_sdk/schemas/document.schema.json" = "imperal_sdk/schemas/document.schema.json"
"src/imperal_sdk/schemas/completion_result.schema.json" = "imperal_sdk/schemas/completion_result.schema.json"
"src/imperal_sdk/schemas/limits_result.schema.json" = "imperal_sdk/schemas/limits_result.schema.json"
"src/imperal_sdk/schemas/subscription_info.schema.json" = "imperal_sdk/schemas/subscription_info.schema.json"
"src/imperal_sdk/schemas/balance_info.schema.json" = "imperal_sdk/schemas/balance_info.schema.json"
"src/imperal_sdk/schemas/file_info.schema.json" = "imperal_sdk/schemas/file_info.schema.json"
"src/imperal_sdk/schemas/http_response.schema.json" = "imperal_sdk/schemas/http_response.schema.json"

[tool.pytest.ini_options]
asyncio_mode = "auto"
